# WordCounter

./: CMakeLists.txt  README.md  WordCounterMain.qml  histogram.js  main.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: core.h
src/core/src/: core.cpp
src/fabric/: CMakeLists.txt
src/fabric/include/: fabric.h
src/fabric/src/: fabric.cpp
src/filemanager/: CMakeLists.txt
src/filemanager/include/: filemanager.h
src/filemanager/src/: filemanager.cpp
src/filereader/: CMakeLists.txt
src/filereader/include/: IFileReader.h  readFromTxt.h
src/filereader/src/: IFileReader.cpp  readFromTxt.cpp
src/histogram/: CMakeLists.txt
src/histogram/include/: histogram.h
src/histogram/src/: histogram.cpp
src/progressbar/: CMakeLists.txt
src/progressbar/include/: ProgressBar.h
src/progressbar/src/: ProgressBar.cpp
src/uimediator/: CMakeLists.txt
src/uimediator/include/: uimediator.h
src/uimediator/src/: uimediator.cpp
src/vocabularycreator/: CMakeLists.txt
src/vocabularycreator/include/: IVocabularyCreator.h  VocabularyMultiMapCreator.h
src/vocabularycreator/src/: IVocabularyCreator.cpp  VocabularyMultiMapCreator.cpp
src/vocabularymodel/: CMakeLists.txt
src/vocabularymodel/include/: VocabularyCurrentModel.h  vocabularymodel.h
src/vocabularymodel/src/: VocabularyCurrentModel.cpp  vocabularymodel.cpp
ui/: CMakeLists.txt  qml.qrc
